--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.2.4",
     "@types/react-dom": "^18.2.3",
     "daisyui": "^2.51.6",
+    "firebase": "^9.21.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-image-crop": "^10.0.9",
